# EUREKA_CLINICAL

./: .coverage  .gitignore  audit.py  audit_copilot.py  audit_endpoints.py  audit_memory.py  audit_neo4j.py  audit_output.txt  audit_results.json  audit_script.py  claims_inventory.json  customers.csv  docker-compose.neo4j.yml  docker-compose.yml  e2e_runner.py  fetch_endpoints.py  frontend_deep_audit.md  frontend_reality_check.md  inspect_graph.py  inspect_patient.py  package-lock.json  patch_knowledge_routes.py  phase0_census.py  run_reality_audit.py  sales.xlsx  screenshot.js  stress_test_historical.py  test_cert.py  test_copilot.py  test_deploy.py  test_l3.py  test_summary.py  test_summary2.py  upload_test.py  validation_3d1.py  verify_graph_pipeline.py  verify_intelligence_layer.py  wipe_db.py
eureka-multiverse/: .coverage  .env.example  docker-compose.yml  pyproject.toml  requirements.txt
eureka-multiverse/backend/agents/: nodes.py
eureka-multiverse/backend/api/: main.py
eureka-multiverse/backend/db/: config.py  database.py
eureka-multiverse/backend/fuzzy/: engine.py
eureka-multiverse/backend/langgraph/: workflow.py
eureka-multiverse/backend/memory/: service.py
eureka-multiverse/backend/ml/: predictor_v0.py
eureka-multiverse/backend/models/: api_dtos.py  memory.py
eureka-multiverse/frontend/: package-lock.json  package.json  tailwind.config.js
eureka-multiverse/tests/: conftest.py  test_core.py  test_db_repositories.py  test_descriptor.py  test_fuzzy.py  test_predictor.py  test_prescriptor.py  test_structurer.py  test_workflow.py
(+331 files in other folders)
