[project]
name = "eureka-multiverse"
version = "0.1.0"
description = "EUREKA Multiverse - Cognitive System MVP"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "beanie>=1.25.0",
    "motor>=3.3.2",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "langgraph>=0.0.26",
    "langchain-core>=0.1.23",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.3",
    "scikit-fuzzy>=0.4.2",
    "pandas>=2.2.0",
    "numpy>=1.26.3",
    "python-dotenv>=1.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
